--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <title>Menu Mobile</title>
   <link rel="stylesheet" href="./Html/index.css">
   <script src="./Html/code.jquery.com_jquery-3.7.0.js"></script>
+  <style>
+	@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&family=Rubik&display=swap');
+	</style>
 </head>
 
 <body>
@@ -37,9 +40,9 @@
 				</div>
 				<div class="contend">
 					<h1>A Wiki das Wikis</h1>
-					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam sequi dicta odio commodi placeat
-						corporis, unde neque, sit, quaerat nostrum iusto vitae natus. Odio commodi perferendis excepturi
-						incidunt natus tenetur.</p>
+					<p>Roubar carros, matar pessoas e ir nas boates de Los Santos é uma experiência única para os amantes da arte. Aqui no setor G, você, um amante da arte,
+						encontrará todas as informações necessárias para realizar esses feitos (VIRTUALMENTE!!!), no aclamado jogo do Rockstar Games, Grant Theft Auto V. E, além disso, você também encontrará
+						diversas informações e curiosidades sobre o jogo. Seja bem-vindo ao Setor G e não atire e nem atropele pessoas só porque é divertido fazer isso virtualmente :).</p>
 
 						<div class="images">
 							<figure class="imagens-jp">
