--- a/armas_gtav/armas.html
+++ b/armas_gtav/armas.html
@@ -1,129 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <script>
-        function toggleVisibility(button) {
-            var divLaranja = document.querySelector('.indice-conteudo');
-            var LaranjaHeader = document.querySelector('.indice-header');
-            var buttonCollor = document.querySelector('#indice_button');
-
-            divLaranja.classList.toggle('highlight');
-            LaranjaHeader.classList.toggle('highlight');
-            buttonCollor.classList.toggle('highlight');
-            button.textContent = divLaranja.classList.contains('highlight') ? 'mostrar' : 'ocultar';
-        }
-
-        window.onload = function () {
-            var button = document.querySelector('.laranja button');
-            button.addEventListener('click', function () {
-                toggleVisibility(this);
-            });
-        };
-
-        $(document).ready(function() {
-            $('.link-ancla').click(function(e) {
-              e.preventDefault();
-              
-              var target = $(this).attr('href');
-              var windowHeight = $(window).height();
-              var elementOffset = $(target).offset().top;
-              var scrollToPosition = elementOffset - (windowHeight / 2);
-              
-              $('html, body').animate({
-                scrollTop: scrollToPosition
-              }, 1000);
-            });
-          });
-
-    </script>
-    <script>
-        function scrollToTop() {
-            window.scrollTo({
-                top: 0,
-                behavior: 'smooth'
-            });
-        }
-    </script>
-    <meta charset="UTF-8">
-    <title>Weapon Stats</title>
-    <link rel="stylesheet" href="armas.css">
+<script src="../Html/code.jquery.com_jquery-3.7.0.js"></script>
+  <link rel="stylesheet" href="./armas.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Grand Theft Auto V</title>
 </head>
-
 <body>
-    <div class="wrapper">
-        <div class="wrapper">
-            <header>
-                <nav>
-                    <ul class="lista">
-                        <li class="button"><img src="./assets/logos/gta5.png" alt="">
-                            <ul class="submenu">
-                                <li><a href="../sobre_gtav/sobre.html">Sobre</a></li>
-                                <li><a href="../veiculos_gtav/veiculohp.html">Veiculos</a></li>
-                                <li><a href="../personagens_gtav/teste.html">Personagens</a></li>
-                                <li><a href="../radio_gtav/radios.html">Rádios</a></li>
-                                <li><a href="../mapa_gtav/radios.html">Mapa</a></li>
-                                <li><a href="../cheats_gtav/cheats.html">Codigos</a></li>
-                                <li><a href="../trofeus_gtav/teste2.html">Conquistas</a></li>
-                                <li><a href="../armas_gtav/armas.html">Armas</a></li>
-                              </ul>
-                        </li>
-                        <li class="button"><img src="./assets/logos/gta4.png" alt="">
-                            <ul class="submenu">
-                                <li><a>Sobre</a></li>
-                                <li><a>Veiculos</a></li>
-                                <li><a>Personagens</a></li>
-                                <li><a>Rádios</a></li>
-                                <li><a>Mapas</a></li>
-                                <li><a>Codigos</a></li>
-                                <li><a>Conquistas</a></li>
-                            </ul>
-                        </li>
-                        <li class="button"><img src="./assets/logos/gtasa.png" alt="">
-                            <ul class="submenu">
-                                <li><a>Sobre</a></li>
-                                <li><a>Veiculos</a></li>
-                                <li><a>Personagens</a></li>
-                                <li><a>Rádios</a></li>
-                                <li><a>Mapas</a></li>
-                                <li><a>Codigos</a></li>
-                                <li><a>Conquistas</a></li>
-                            </ul>
-                        </li>
-                        <li class="button"><img src="./assets/logos/gta-vice-city.png" alt="" style="margin-top: 5px;">
-                            <ul class="submenu">
-                                <li><a>Sobre</a></li>
-                                <li><a>Veiculos</a></li>
-                                <li><a>Personagens</a></li>
-                                <li><a>Rádios</a></li>
-                                <li><a>Mapas</a></li>
-                                <li><a>Codigos</a></li>
-                                <li><a>Conquistas</a></li>
-                            </ul>
-                        </li>
-                        <li class="button"><img src="./assets/logos/gta123.png" alt="" style="margin-bottom: 5px;">
-                            <ul class="submenu">
-                                <li><a>Sobre</a></li>
-                                <li><a>Veiculos</a></li>
-                                <li><a>Personagens</a></li>
-                                <li><a>Rádios</a></li>
-                                <li><a>Mapas</a></li>
-                                <li><a>Codigos</a></li>
-                                <li><a>Conquistas</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </nav>
-            </header>
+  <div class="wrapper">
+		<header id="header">
+			<a id="logo" href=""><img src="./assets/logo.png" alt=""></a>
+			<nav id="nav">
+			<button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
+				<span id="hamburger"></span>
+			</button>
+			<ul id="menu" role="menu">
+				<li ><a  id="n555" href="../sobre_gtav/sobre.html">Sobre</a></li>
+				<li><a href="../veiculos_gtav/veiculohp.html">Veiculos</a></li>
+				<li><a href="../personagens_gtav/teste.html">Personagens</a></li>
+				<li><a href="../radio_gtav/radios.html">Rádios</a></li>
+				<li><a href="../mapa_gtav/mapashp.html">Mapa</a></li>
+				<li><a href="../cheats_gtav/cheats.html">Codigos</a></li>
+				<li><a href="../trofeus_gtav/teste2.html">Conquistas</a></li>
+				<li><a href="../armas_gtav/armas.html">Armas</a></li>
+			</ul>
+			</nav>
+		</header>
+
             <main>
                 <div id="myelement" class="sticky-element">
                     <button onclick="scrollToTop()">Começo</button>
                 </div>
-
-                <div class="logo">
-                    <a href="../Html/index.html"><img src="./assets/logo.png" alt=""></a>
-                </div>
-
                 <h1>Armas do Grand Theft Auto V</h1>
                 <!-- <h3>Conteúdo </h3> -->
                 <p> Grand Theft Auto V contém 61 armas diferentes.</p>
@@ -158,16 +67,16 @@
                     </div>
                     <div class="indice-conteudo">
                         <ol>
-                            <li><a href="#rifles_assalto"><span>1.1</span> Rifles de Assalto</a></li>
-                            <li><a href="#rifles_precisao"><span>1.2</span> Rifles de Precisão</a></li>
-                            <li><a href="#Metralhadoras_Submetralhadoras"><span>1.3</span> Metralhadoras e
+                            <li><a class="link-ancla" href="#rifles_assalto"><span>1.1</span> Rifles de Assalto</a></li>
+                            <li><a class="link-ancla" href="#rifles_precisao"><span>1.2</span> Rifles de Precisão</a></li>
+                            <li><a class="link-ancla" href="#Metralhadoras_Submetralhadoras"><span>1.3</span> Metralhadoras e
                                     Sub-Metralhadoras</a></li>
-                            <li><a href="#escopetas"><span>1.4</span> Escopetas</a></li>
-                            <li><a href="#armas_pesadas"><span>1.5</span> Armas Pesadas</a></li>
-                            <li><a href="#Pistolas"><span>1.6</span> Pistolas</a></li>
-                            <li><a href="#corpo_a_corpo"><span>1.7</span> Corpo a Corpo</a></li>
-                            <li><a href="#arremessaveis"><span>1.8</span> Arremesáveis</a></li>
-                            <li><a href="#especiais"><span>1.9</span> Especiais</a></li>
+                            <li><a class="link-ancla" href="#escopetas"><span>1.4</span> Escopetas</a></li>
+                            <li><a class="link-ancla" href="#armas_pesadas"><span>1.5</span> Armas Pesadas</a></li>
+                            <li><a class="link-ancla" href="#Pistolas"><span>1.6</span> Pistolas</a></li>
+                            <li><a class="link-ancla" href="#corpo_a_corpo"><span>1.7</span> Corpo a Corpo</a></li>
+                            <li><a class="link-ancla" href="#arremessaveis"><span>1.8</span> Arremesáveis</a></li>
+                            <li><a class="link-ancla" href="#especiais"><span>1.9</span> Especiais</a></li>
                         </ol>
                     </div>
                 </div>
@@ -2452,5 +2361,6 @@
         </div>
 
         <body>
+    <script src="../Html/index.js"></script>
 
 </html>
