--- a/veiculos_gtav/esportivosclassicos.html
+++ b/veiculos_gtav/esportivosclassicos.html
@@ -1,106 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <script>
-        function toggleVisibility(button) {
-            var divLaranja = document.querySelector('.indice-conteudo');
-            var divLaranjaA = document.querySelector('.laranja');
-            var LaranjaHeader = document.querySelector('.indice-header');
-            var buttonCollor = document.querySelector('#indice_button');
-
-            divLaranjaA.classList.toggle('highlight');
-            divLaranja.classList.toggle('highlight');
-            LaranjaHeader.classList.toggle('highlight');
-            buttonCollor.classList.toggle('highlight');
-            button.textContent = divLaranja.classList.contains('highlight') ? 'ocultar' : 'mostrar';
-        }
-
-        window.onload = function () {
-            var button = document.querySelector('.laranja button');
-            button.addEventListener('click', function () {
-                toggleVisibility(this);
-            });
-
-        };
-
-    </script>
-    <script>
-        function scrollToTop() {
-            window.scrollTo({
-                top: 0,
-                behavior: 'smooth'
-            });
-        }
-    </script>
+    <script src="../Html/code.jquery.com_jquery-3.7.0.js"></script>
+    <link rel="stylesheet" href="./mainstyles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./mainstyles.css">
-    <title>Document</title>
+    <title>Grand Theft Auto V</title>
 </head>
 
 <body>
     <div class="wrapper">
-        <header>
-            <nav>
-                <ul class="lista">
-                    <li class="button"><img src="./assets/logos/gta5.png" alt="">
-                        <ul class="submenu">
-                            <li><a href="../sobre_gtav/sobre.html">Sobre</a></li>
-                            <li><a href="../veiculos_gtav/veiculohp.html">Veiculos</a></li>
-                            <li><a href="../personagens_gtav/teste.html">Personagens</a></li>
-                            <li><a href="../radio_gtav/radios.html">Rádios</a></li>
-                            <li><a href="../mapa_gtav/radios.html">Mapa</a></li>
-                            <li><a href="../cheats_gtav/cheats.html">Codigos</a></li>
-                            <li><a href="../trofeus_gtav/teste2.html">Conquistas</a></li>
-                            <li><a href="../armas_gtav/armas.html">Armas</a></li>
-                          </ul>
-                    </li>
-                    <li class="button"><img src="./assets/logos/gta4.png" alt="">
-                        <ul class="submenu">
-                            <li><a>Sobre</a></li>
-                            <li><a>Veiculos</a></li>
-                            <li><a>Personagens</a></li>
-                            <li><a>Rádios</a></li>
-                            <li><a>Mapas</a></li>
-                            <li><a>Codigos</a></li>
-                            <li><a>Conquistas</a></li>
-                        </ul>
-                    </li>
-                    <li class="button"><img src="./assets/logos/gtasa.png" alt="">
-                        <ul class="submenu">
-                            <li><a>Sobre</a></li>
-                            <li><a>Veiculos</a></li>
-                            <li><a>Personagens</a></li>
-                            <li><a>Rádios</a></li>
-                            <li><a>Mapas</a></li>
-                            <li><a>Codigos</a></li>
-                            <li><a>Conquistas</a></li>
-                        </ul>
-                    </li>
-                    <li class="button"><img src="./assets/logos/gta-vice-city.png" alt="" style="margin-top: 5px;">
-                        <ul class="submenu">
-                            <li><a>Sobre</a></li>
-                            <li><a>Veiculos</a></li>
-                            <li><a>Personagens</a></li>
-                            <li><a>Rádios</a></li>
-                            <li><a>Mapas</a></li>
-                            <li><a>Codigos</a></li>
-                            <li><a>Conquistas</a></li>
-                        </ul>
-                    </li>
-                    <li class="button"><img src="./assets/logos/gta123.png" alt="" style="margin-bottom: 5px;">
-                        <ul class="submenu">
-                            <li><a>Sobre</a></li>
-                            <li><a>Veiculos</a></li>
-                            <li><a>Personagens</a></li>
-                            <li><a>Rádios</a></li>
-                            <li><a>Mapas</a></li>
-                            <li><a>Codigos</a></li>
-                            <li><a>Conquistas</a></li>
-                        </ul>
-                    </li>
+        <header id="header">
+            <a id="logo" href=""><img src="../Html/assets/logo.webp" alt=""></a>
+            <nav id="nav">
+                <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu"
+                    aria-expanded="false">
+                    <span id="hamburger"></span>
+                </button>
+                <ul id="menu" role="menu">
+                    <li><a id="n555" href="../sobre_gtav/sobre.html">Sobre</a></li>
+                    <li><a href="../veiculos_gtav/veiculohp.html">Veículos</a></li>
+                    <li><a href="../personagens_gtav/teste.html">Personagens</a></li>
+                    <li><a href="../radio_gtav/radios.html">Rádios</a></li>
+                    <li><a href="../mapa_gtav/mapashp.html">Mapa</a></li>
+                    <li><a href="../cheats_gtav/cheats.html">Códigos</a></li>
+                    <li><a href="../trofeus_gtav/teste2.html">Conquistas</a></li>
+                    <li><a href="../armas_gtav/armas.html">Armas</a></li>
                 </ul>
             </nav>
         </header>
@@ -108,11 +34,6 @@
             <div id="myelement" class="sticky-element">
                 <button onclick="scrollToTop()">Começo</button>
             </div>
-
-            <div class="logo">
-                <a href="../Html/index.html"><img src="./assets/logo.png" alt=""></a>
-            </div>
-            <a href="./veiculohp.html" id="video_tutorial">Página anterior</a>
             <h1 style="text-align: center;">Esportivos Clássicos - GTA V</h1>
             <p></p>
             
@@ -123,44 +44,44 @@
                 </div>
                 <div class="indice-conteudo">
                     <ol>
-                        <li><a href="#v1"><span>1.</span> Albany Manana</a></li>
-                        <li><a href="#v2"><span>2.</span> Declasse Tornado</a></li>
-                        <li><a href="#v3"><span>3.</span> Dewbauchee JB 700</a></li>
-                        <li><a href="#v4"><span>4.</span> Grotti Stinger</a></li>
-                        <li><a href="#v5"><span>5.</span> Grotti Stinger GT</a></li>
-                        <li><a href="#v6"><span>6.</span> Pegassi Monroe</a></li>
-                        <li><a href="#v7"><span>7.</span> Truffade Z-Type</a></li>
-                        <li><a href="#v8"><span>8.</span> Vapid Peyote</a></li>
-                        <li><a href="#v9"><span>9.</span> Invetero Coquette Classic</a></li>
-                        <li><a href="#v10"><span>10.</span> Lampadati Casco</a></li>
-                        <li><a href="#v11"><span>11.</span> Albany Roosevelt</a></li>
-                        <li><a href="#v12"><span>12.</span> Lampadati Pigalle</a></li>
-                        <li><a href="#v13"><span>13.</span> Benefactor Stirling GT</a></li>
-                        <li><a href="#v14"><span>14.</span> Declasse Mamba</a></li>
-                        <li><a href="#v15"><span>15.</span> Albany Fránken Stange</a></li>
-                        <li><a href="#v16"><span>16.</span> Albany Roosevelt Valor</a></li>
-                        <li><a href="#v17"><span>17.</span> Declasse Tornado Custom</a></li>
-                        <li><a href="#v18"><span>18.</span> Declasse Tornado Rat Rod</a></li>
-                        <li><a href="#v19"><span>19.</span> Pegassi Infernus Classic</a></li>
-                        <li><a href="#v20"><span>20.</span> Grotti Turismo Classic</a></li>
-                        <li><a href="#v21"><span>21.</span> Ocelot Ardent</a></li>
-                        <li><a href="#v22"><span>22.</span> Pegassi Torero</a></li>
-                        <li><a href="#v23"><span>23.</span> Grotti Cheetah Classic</a></li>
-                        <li><a href="#v24"><span>24.</span> Smugglerás Run</a></li>
-                        <li><a href="#v25"><span>25.</span> Vapid Retinue</a></li>
-                        <li><a href="#v26"><span>26.</span> Dewbauchee Rapid GT Classic</a></li>
-                        <li><a href="#v27"><span>27.</span> Karin 190z</a></li>
-                        <li><a href="#v28"><span>28.</span> Lampadati Viseris</a></li>
-                        <li><a href="#v29"><span>29.</span> Ocelot Stromberg</a></li>
-                        <li><a href="#v30"><span>30.</span> Grotti GT500</a></li>
-                        <li><a href="#v31"><span>31.</span> Annis Savestra</a></li>
-                        <li><a href="#v32"><span>32.</span> Vulcar Fagaloa</a></li>
-                        <li><a href="#v33"><span>33.</span> Lampadati Michelli GT</a></li>
-                        <li><a href="#v34"><span>34.</span> Rune Cheburek</a></li>
-                        <li><a href="#v35"><span>35.</span> Ocelot Swinger</a></li>
-                        <li><a href="#v36"><span>36.</span> Vulcar Nebula Turbo</a></li>
-                        <li><a href="#v37"><span>37.</span> Ubermacht Zion Classic</a></li>
-                        <li><a href="#v38"><span>38.</span> Weeny Dynasty</a></li>
+                        <li><a class="link-ancla" href="#v1"><span>1.</span> Albany Manana</a></li>
+                        <li><a class="link-ancla" href="#v2"><span>2.</span> Declasse Tornado</a></li>
+                        <li><a class="link-ancla" href="#v3"><span>3.</span> Dewbauchee JB 700</a></li>
+                        <li><a class="link-ancla" href="#v4"><span>4.</span> Grotti Stinger</a></li>
+                        <li><a class="link-ancla" href="#v5"><span>5.</span> Grotti Stinger GT</a></li>
+                        <li><a class="link-ancla" href="#v6"><span>6.</span> Pegassi Monroe</a></li>
+                        <li><a class="link-ancla" href="#v7"><span>7.</span> Truffade Z-Type</a></li>
+                        <li><a class="link-ancla" href="#v8"><span>8.</span> Vapid Peyote</a></li>
+                        <li><a class="link-ancla" href="#v9"><span>9.</span> Invetero Coquette Classic</a></li>
+                        <li><a class="link-ancla" href="#v10"><span>10.</span> Lampadati Casco</a></li>
+                        <li><a class="link-ancla" href="#v11"><span>11.</span> Albany Roosevelt</a></li>
+                        <li><a class="link-ancla" href="#v12"><span>12.</span> Lampadati Pigalle</a></li>
+                        <li><a class="link-ancla" href="#v13"><span>13.</span> Benefactor Stirling GT</a></li>
+                        <li><a class="link-ancla" href="#v14"><span>14.</span> Declasse Mamba</a></li>
+                        <li><a class="link-ancla" href="#v15"><span>15.</span> Albany Fránken Stange</a></li>
+                        <li><a class="link-ancla" href="#v16"><span>16.</span> Albany Roosevelt Valor</a></li>
+                        <li><a class="link-ancla" href="#v17"><span>17.</span> Declasse Tornado Custom</a></li>
+                        <li><a class="link-ancla" href="#v18"><span>18.</span> Declasse Tornado Rat Rod</a></li>
+                        <li><a class="link-ancla" href="#v19"><span>19.</span> Pegassi Infernus Classic</a></li>
+                        <li><a class="link-ancla" href="#v20"><span>20.</span> Grotti Turismo Classic</a></li>
+                        <li><a class="link-ancla" href="#v21"><span>21.</span> Ocelot Ardent</a></li>
+                        <li><a class="link-ancla" href="#v22"><span>22.</span> Pegassi Torero</a></li>
+                        <li><a class="link-ancla" href="#v23"><span>23.</span> Grotti Cheetah Classic</a></li>
+                        <li><a class="link-ancla" href="#v24"><span>24.</span> Smugglerás Run</a></li>
+                        <li><a class="link-ancla" href="#v25"><span>25.</span> Vapid Retinue</a></li>
+                        <li><a class="link-ancla" href="#v26"><span>26.</span> Dewbauchee Rapid GT Classic</a></li>
+                        <li><a class="link-ancla" href="#v27"><span>27.</span> Karin 190z</a></li>
+                        <li><a class="link-ancla" href="#v28"><span>28.</span> Lampadati Viseris</a></li>
+                        <li><a class="link-ancla" href="#v29"><span>29.</span> Ocelot Stromberg</a></li>
+                        <li><a class="link-ancla" href="#v30"><span>30.</span> Grotti GT500</a></li>
+                        <li><a class="link-ancla" href="#v31"><span>31.</span> Annis Savestra</a></li>
+                        <li><a class="link-ancla" href="#v32"><span>32.</span> Vulcar Fagaloa</a></li>
+                        <li><a class="link-ancla" href="#v33"><span>33.</span> Lampadati Michelli GT</a></li>
+                        <li><a class="link-ancla" href="#v34"><span>34.</span> Rune Cheburek</a></li>
+                        <li><a class="link-ancla" href="#v35"><span>35.</span> Ocelot Swinger</a></li>
+                        <li><a class="link-ancla" href="#v36"><span>36.</span> Vulcar Nebula Turbo</a></li>
+                        <li><a class="link-ancla" href="#v37"><span>37.</span> Ubermacht Zion Classic</a></li>
+                        <li><a class="link-ancla" href="#v38"><span>38.</span> Weeny Dynasty</a></li>
                     </ol>
                 </div>
             </div>
@@ -1082,12 +1003,12 @@
         </main>
         <footer>
             <ul id="criadores" class="criadores">
-                <h2>Colaboradores</h2>
+                <h2>Desenvolvedores</h2>
                 <li>Erick Ribeiro</li>
                 <hr>
-                <li>Whendersson</li>
+                <li>Wenderson Dhomini</li>
                 <hr>
-                <li>Gerlândio</li>
+                <li>Gerlândio da Silva</li>
                 <hr>
                 <li>José Magno</li>
                 <hr>
@@ -1097,4 +1018,5 @@
         </footer>
     </div>
 </body>
+<script src="../Html/veiculos.js"></script>
 </html>
