--- a/veiculos_gtav/supers.html
+++ b/veiculos_gtav/supers.html
@@ -1,104 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <script>
-        function toggleVisibility(button) {
-            var divLaranja = document.querySelector('.indice-conteudo');
-            var LaranjaHeader = document.querySelector('.indice-header');
-            var buttonCollor = document.querySelector('#indice_button');
-
-            divLaranja.classList.toggle('highlight');
-            LaranjaHeader.classList.toggle('highlight');
-            buttonCollor.classList.toggle('highlight');
-            button.textContent = divLaranja.classList.contains('highlight') ? 'ocultar' : 'mostrar';
-        }
-
-        window.onload = function () {
-            var button = document.querySelector('.laranja button');
-            button.addEventListener('click', function () {
-                toggleVisibility(this);
-            });
-
-        };
-
-    </script>
-    <script>
-        function scrollToTop() {
-            window.scrollTo({
-                top: 0,
-                behavior: 'smooth'
-            });
-        }
-    </script>
+    <script src="../Html/code.jquery.com_jquery-3.7.0.js"></script>
+    <link rel="stylesheet" href="./mainstyles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./mainstyles.css">
-    <title>Document</title>
+    <title>Grand Theft Auto V</title>
 </head>
 
 <body>
     <div class="wrapper">
-        <header>
-            <nav>
-                <ul class="lista">
-                    <li class="button"><img src="./assets/logos/gta5.png" alt="">
-                        <ul class="submenu">
-                            <li><a href="../sobre_gtav/sobre.html">Sobre</a></li>
-                            <li><a href="../veiculos_gtav/veiculohp.html">Veiculos</a></li>
-                            <li><a href="../personagens_gtav/teste.html">Personagens</a></li>
-                            <li><a href="../radio_gtav/radios.html">Rádios</a></li>
-                            <li><a href="../mapa_gtav/radios.html">Mapa</a></li>
-                            <li><a href="../cheats_gtav/cheats.html">Codigos</a></li>
-                            <li><a href="../trofeus_gtav/teste2.html">Conquistas</a></li>
-                            <li><a href="../armas_gtav/armas.html">Armas</a></li>
-                          </ul>
-                    </li>
-                    <li class="button"><img src="./assets/logos/gta4.png" alt="">
-                        <ul class="submenu">
-                            <li><a>Sobre</a></li>
-                            <li><a>Veiculos</a></li>
-                            <li><a>Personagens</a></li>
-                            <li><a>Rádios</a></li>
-                            <li><a>Mapas</a></li>
-                            <li><a>Codigos</a></li>
-                            <li><a>Conquistas</a></li>
-                        </ul>
-                    </li>
-                    <li class="button"><img src="./assets/logos/gtasa.png" alt="">
-                        <ul class="submenu">
-                            <li><a>Sobre</a></li>
-                            <li><a>Veiculos</a></li>
-                            <li><a>Personagens</a></li>
-                            <li><a>Rádios</a></li>
-                            <li><a>Mapas</a></li>
-                            <li><a>Codigos</a></li>
-                            <li><a>Conquistas</a></li>
-                        </ul>
-                    </li>
-                    <li class="button"><img src="./assets/logos/gta-vice-city.png" alt="" style="margin-top: 5px;">
-                        <ul class="submenu">
-                            <li><a>Sobre</a></li>
-                            <li><a>Veiculos</a></li>
-                            <li><a>Personagens</a></li>
-                            <li><a>Rádios</a></li>
-                            <li><a>Mapas</a></li>
-                            <li><a>Codigos</a></li>
-                            <li><a>Conquistas</a></li>
-                        </ul>
-                    </li>
-                    <li class="button"><img src="./assets/logos/gta123.png" alt="" style="margin-bottom: 5px;">
-                        <ul class="submenu">
-                            <li><a>Sobre</a></li>
-                            <li><a>Veiculos</a></li>
-                            <li><a>Personagens</a></li>
-                            <li><a>Rádios</a></li>
-                            <li><a>Mapas</a></li>
-                            <li><a>Codigos</a></li>
-                            <li><a>Conquistas</a></li>
-                        </ul>
-                    </li>
+        <header id="header">
+            <a id="logo" href=""><img src="../Html/assets/logo.webp" alt=""></a>
+            <nav id="nav">
+                <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu"
+                    aria-expanded="false">
+                    <span id="hamburger"></span>
+                </button>
+                <ul id="menu" role="menu">
+                    <li><a id="n555" href="../sobre_gtav/sobre.html">Sobre</a></li>
+                    <li><a href="../veiculos_gtav/veiculohp.html">Veículos</a></li>
+                    <li><a href="../personagens_gtav/teste.html">Personagens</a></li>
+                    <li><a href="../radio_gtav/radios.html">Rádios</a></li>
+                    <li><a href="../mapa_gtav/mapashp.html">Mapa</a></li>
+                    <li><a href="../cheats_gtav/cheats.html">Códigos</a></li>
+                    <li><a href="../trofeus_gtav/teste2.html">Conquistas</a></li>
+                    <li><a href="../armas_gtav/armas.html">Armas</a></li>
                 </ul>
             </nav>
         </header>
@@ -106,11 +34,6 @@
             <div id="myelement" class="sticky-element">
                 <button onclick="scrollToTop()">Começo</button>
             </div>
-
-            <div class="logo">
-                <a href="../Html/index.html"><img src="./assets/logo.png" alt=""></a>
-            </div>
-            <a href="./veiculohp.html" id="video_tutorial">Página anterior</a>
 
             <h1 style="text-align: center;">Supers - GTA V</h1>
             
@@ -121,50 +44,50 @@
                 </div>
                 <div class="indice-conteudo">
                     <ol>
-                        <li><a href="#v1"><span>1.</span> Coil Voltic</a></li>
-                        <li><a href="#v2"><span>2.</span> Grotti Cheetah</a></li>
-                        <li><a href="#v3"><span>3.</span> Overflod Entity XF</a></li>
-                        <li><a href="#v4"><span>4.</span> Pegassi Infernus</a></li>
-                        <li><a href="#v5"><span>5.</span> Pegassi Vacca</a></li>
-                        <li><a href="#v6"><span>6.</span> Truffade Adder</a></li>
-                        <li><a href="#v7"><span>7.</span> Vapid Bullet</a></li>
-                        <li><a href="#v8"><span>8.</span> Pegassi Zentorno</a></li>
-                        <li><a href="#v9"><span>9.</span> Grotti Turismo R</a></li>
-                        <li><a href="#v10"><span>10.</span> Pegassi Osiris</a></li>
-                        <li><a href="#v11"><span>11.</span> Progen T20</a></li>
-                        <li><a href="#v12"><span>12.</span> Bravado Banshee 900R</a></li>
-                        <li><a href="#v13"><span>13.</span> Karin Sultan RS</a></li>
-                        <li><a href="#v14"><span>14.</span> Grotti X80 Proto</a></li>
-                        <li><a href="#v15"><span>15.</span> Pegassi Reaper</a></li>
-                        <li><a href="#v16"><span>16.</span> Pfister 811</a></li>
-                        <li><a href="#v17"><span>17.</span> Vapid FMJ</a></li>
-                        <li><a href="#v18"><span>18.</span> Annis RE-7B</a></li>
-                        <li><a href="#v19"><span>19.</span> Emperor ETR1</a></li>
-                        <li><a href="#v20"><span>20.</span> Progen Tyrus</a></li>
-                        <li><a href="#v21"><span>21.</span> Progen GP1</a></li>
-                        <li><a href="#v22"><span>22.</span> Coil Rocket Voltic</a></li>
-                        <li><a href="#v23"><span>23.</span> Ocelot Penetrator</a></li>
-                        <li><a href="#v24"><span>24.</span> Pegassi Tempesta</a></li>
-                        <li><a href="#v25"><span>25.</span> Progen Itali GTB</a></li>
-                        <li><a href="#v26"><span>26.</span> Progen Itali GTB Custom</a></li>
-                        <li><a href="#v27"><span>27.</span> Truffade Nero</a></li>
-                        <li><a href="#v28"><span>28.</span> Truffade Nero Custom</a></li>
-                        <li><a href="#v29"><span>29.</span> Ocelot XA-21</a></li>
-                        <li><a href="#v30"><span>30.</span> Dewbauchee Vagner</a></li>
-                        <li><a href="#v31"><span>31.</span> Grotti Vigilante</a></li>
-                        <li><a href="#v32"><span>32.</span> Coil Cyclone</a></li>
-                        <li><a href="#v33"><span>33.</span> Grotti Visione</a></li>
-                        <li><a href="#v34"><span>34.</span> Overflod Autarch</a></li>
-                        <li><a href="#v35"><span>35.</span> Pegassi Tezeract</a></li>
-                        <li><a href="#v36"><span>36.</span> Overflod Tyrant</a></li>
-                        <li><a href="#v37"><span>37.</span> Overflod Entity XXR</a></li>
-                        <li><a href="#v38"><span>38.</span> Cheval Taipan</a></li>
-                        <li><a href="#v39"><span>39.</span> Declasse Scramjet</a></li>
-                        <li><a href="#v40"><span>40.</span> Principe Deveste Eight</a></li>
-                        <li><a href="#v41"><span>41.</span> Annis S80RR</a></li>
-                        <li><a href="#v42"><span>42.</span> Truffade Thrax</a></li>
-                        <li><a href="#v43"><span>43.</span> Progen Emerus</a></li>
-                        <li><a href="#v44"><span>44.</span> Benefactor Krieger</a></li>
+                        <li><a class="link-ancla" href="#v1"><span>1.</span> Coil Voltic</a></li>
+                        <li><a class="link-ancla" href="#v2"><span>2.</span> Grotti Cheetah</a></li>
+                        <li><a class="link-ancla" href="#v3"><span>3.</span> Overflod Entity XF</a></li>
+                        <li><a class="link-ancla" href="#v4"><span>4.</span> Pegassi Infernus</a></li>
+                        <li><a class="link-ancla" href="#v5"><span>5.</span> Pegassi Vacca</a></li>
+                        <li><a class="link-ancla" href="#v6"><span>6.</span> Truffade Adder</a></li>
+                        <li><a class="link-ancla" href="#v7"><span>7.</span> Vapid Bullet</a></li>
+                        <li><a class="link-ancla" href="#v8"><span>8.</span> Pegassi Zentorno</a></li>
+                        <li><a class="link-ancla" href="#v9"><span>9.</span> Grotti Turismo R</a></li>
+                        <li><a class="link-ancla" href="#v10"><span>10.</span> Pegassi Osiris</a></li>
+                        <li><a class="link-ancla" href="#v11"><span>11.</span> Progen T20</a></li>
+                        <li><a class="link-ancla" href="#v12"><span>12.</span> Bravado Banshee 900R</a></li>
+                        <li><a class="link-ancla" href="#v13"><span>13.</span> Karin Sultan RS</a></li>
+                        <li><a class="link-ancla" href="#v14"><span>14.</span> Grotti X80 Proto</a></li>
+                        <li><a class="link-ancla" href="#v15"><span>15.</span> Pegassi Reaper</a></li>
+                        <li><a class="link-ancla" href="#v16"><span>16.</span> Pfister 811</a></li>
+                        <li><a class="link-ancla" href="#v17"><span>17.</span> Vapid FMJ</a></li>
+                        <li><a class="link-ancla" href="#v18"><span>18.</span> Annis RE-7B</a></li>
+                        <li><a class="link-ancla" href="#v19"><span>19.</span> Emperor ETR1</a></li>
+                        <li><a class="link-ancla" href="#v20"><span>20.</span> Progen Tyrus</a></li>
+                        <li><a class="link-ancla" href="#v21"><span>21.</span> Progen GP1</a></li>
+                        <li><a class="link-ancla" href="#v22"><span>22.</span> Coil Rocket Voltic</a></li>
+                        <li><a class="link-ancla" href="#v23"><span>23.</span> Ocelot Penetrator</a></li>
+                        <li><a class="link-ancla" href="#v24"><span>24.</span> Pegassi Tempesta</a></li>
+                        <li><a class="link-ancla" href="#v25"><span>25.</span> Progen Itali GTB</a></li>
+                        <li><a class="link-ancla" href="#v26"><span>26.</span> Progen Itali GTB Custom</a></li>
+                        <li><a class="link-ancla" href="#v27"><span>27.</span> Truffade Nero</a></li>
+                        <li><a class="link-ancla" href="#v28"><span>28.</span> Truffade Nero Custom</a></li>
+                        <li><a class="link-ancla" href="#v29"><span>29.</span> Ocelot XA-21</a></li>
+                        <li><a class="link-ancla" href="#v30"><span>30.</span> Dewbauchee Vagner</a></li>
+                        <li><a class="link-ancla" href="#v31"><span>31.</span> Grotti Vigilante</a></li>
+                        <li><a class="link-ancla" href="#v32"><span>32.</span> Coil Cyclone</a></li>
+                        <li><a class="link-ancla" href="#v33"><span>33.</span> Grotti Visione</a></li>
+                        <li><a class="link-ancla" href="#v34"><span>34.</span> Overflod Autarch</a></li>
+                        <li><a class="link-ancla" href="#v35"><span>35.</span> Pegassi Tezeract</a></li>
+                        <li><a class="link-ancla" href="#v36"><span>36.</span> Overflod Tyrant</a></li>
+                        <li><a class="link-ancla" href="#v37"><span>37.</span> Overflod Entity XXR</a></li>
+                        <li><a class="link-ancla" href="#v38"><span>38.</span> Cheval Taipan</a></li>
+                        <li><a class="link-ancla" href="#v39"><span>39.</span> Declasse Scramjet</a></li>
+                        <li><a class="link-ancla" href="#v40"><span>40.</span> Principe Deveste Eight</a></li>
+                        <li><a class="link-ancla" href="#v41"><span>41.</span> Annis S80RR</a></li>
+                        <li><a class="link-ancla" href="#v42"><span>42.</span> Truffade Thrax</a></li>
+                        <li><a class="link-ancla" href="#v43"><span>43.</span> Progen Emerus</a></li>
+                        <li><a class="link-ancla" href="#v44"><span>44.</span> Benefactor Krieger</a></li>
                     </ol>
                 </div>
             </div>
@@ -1230,12 +1153,12 @@
         </main>
         <footer>
             <ul id="criadores" class="criadores">
-                <h2>Colaboradores</h2>
+                <h2>Desenvolvedores</h2>
                 <li>Erick Ribeiro</li>
                 <hr>
-                <li>Whendersson</li>
+                <li>Wenderson Dhomini</li>
                 <hr>
-                <li>Gerlândio</li>
+                <li>Gerlândio da Silva</li>
                 <hr>
                 <li>José Magno</li>
                 <hr>
@@ -1245,4 +1168,5 @@
         </footer>
     </div>
 </body>
+<script src="../Html/veiculos.js"></script>
 </html>
